--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12.9",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12.9"
     }
 }
