--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     },
     "devDependencies": {
         "axios": "^0.17",
-        "bootstrap": "^4.0.0-beta.3",
+        "bootstrap": "^4.0.0",
+        "bootstrap-table": "^1.11.2",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
+        "open-iconic": "^1.1.1",
         "popper.js": "^1.12.9"
     }
 }
