--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap": "^4.0.0",
-        "bootstrap-table": "^1.11.2",
+        "bootstrap-table": "git+https://github.com/wenzhixin/bootstrap-table.git",
         "cross-env": "^5.1",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "open-iconic": "^1.1.1",
         "popper.js": "^1.12.9"
     }
 }
