--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12.9"
+        "popper.js": "^1.12.9",
+        "selectize.js": "^0.12.12"
     }
 }
