--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap": "^4.0.0",
-        "bootstrap-table": "git+https://github.com/wenzhixin/bootstrap-table.git",
+        "bootstrap-table": "https://github.com/wenzhixin/bootstrap-table.git#503aaae",
         "cross-env": "^5.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2",
