--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Izum1Kun/ITAM",
+    "name": "tklai/ITAM",
     "description": "An IT Asset Management System",
     "keywords": ["ITAM", "Asset Management"],
     "license": "MIT",
